<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EarFlaps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref">Preferences</string>
    <string name="pref_del_tit">Delete quiet</string>
    <string name="pref_del_d_on">Files will delete</string>
    <string name="pref_del_d_off">Files will not delete</string>
    <string name="btn_ch">Change text</string>
    <string name="btn_start">Start service</string>
    <string name="btn_stop">Stop service</string>

    <string-array name="entries">
        <item>control</item>
        <item>log</item>
        <item>empty</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="btn_login">Next</string>
    <string name="txt_ypswrd">Pls, enter your protect key</string>
    <string name="txt_ypswrdWr">Key is incorrect, try again</string>

</resources>