<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="top"
                android:gravity="top"
                android:textAlignment="gravity" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_world" />

                    <Button
                        android:id="@+id/btnOk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/btn_ch" />

                    <Button
                        android:id="@+id/btnStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickStart"
                        android:text="@string/btn_start" >
                    </Button>

                    <Button
                        android:id="@+id/btnStop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickStop"
                        android:text="@string/btn_stop" >
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ListView
                        android:id="@+id/lvMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" >

                    <EditText
                        android:id="@+id/editTextLog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>